# linear-regression-notes

./: README.md  practice-linear-regression.ipynb  pyproject.toml
